--- a/src/login.html
+++ b/src/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-  <link href="/dist/output.css" rel="stylesheet">
+  <link href="../dist/output.css" rel="stylesheet">
 </head>
 <body class="bg-neutral-1000 font-inter antialiased h-screen">
     <header class="flex flex-row gap-0.12 justify-center items-center px-4 py-3">
