--- a/src/step1.html
+++ b/src/step1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-  <link href="/dist/output.css" rel="stylesheet">
+  <link href="../dist/output.css" rel="stylesheet">
 </head>
 <body class=" px-0.9 pb-5 flex flex-col font-inter bg-neutral-1000 text-neutral-50 w-screen h-screen">
     <header class="py-3 flex flex-row gap-5">
