home page problem

--- a/src/home.html
+++ b/src/home.html
@@ -6,7 +6,59 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <link href="../dist/output.css" rel="stylesheet">
 </head>
-<body class="bg-neutral-1000 font-inter antialiased h-screen w-full">
+<body class="bg-neutral-1000 font-inter antialiased h-screen w-full flex flex-col ">
+        <div class="">
+            <img src="../public/images/cover.jpg" alt="cover" class="w-full">
+        </div>
+
+        <div class="flex flex-row pl-5 pr-4 ">
+            <div class="w-17 h-17 border-l rounded-pfp flex justify-center items-center  -mt-8 ">
+                <img src="../public/images/user-avatar.jpg" alt="user-pfp" class="w-full h-full rounded-pfp ">
+            </div>
+
+            <button
+            class=" py-1.5 px-4 rounded-btn text-sm font-bold font-inter shadow-btn backdrop-btn text-neutral-50 border-sm  border-button-stroke right-4 mt-2 absolute ">Edit Profile</button>
+        </div>
+
+        <div class="flex flex-col gap-4 pl-5 pr-4 mt-2">
+
+            <div class="flex flex-col">
+                <span class="text-xl font-bold text-neutral-50">Aarushe reddy</span>
+                <span class="text-neutral-500 text-0.9 font-normal">@aarushe_reddy</span>
+            </div>
+
+            <span class="text-base text-neutral-50 font-normal">Digital Goodies Team - Web & Mobile UI/UX development; Graphics; Illustrations</span>
+
+            <div class="flex flex-row gap-5">
+                <div class="flex flex-row gap-1  items-center">
+                    <img src="../public/images/link-icon.svg" alt="link" class="h-auto w-auto">
+                    <span class="text-base text-twitter-blue font-normal">pixsellz.io</span>
+                </div>
+                <div class="flex flex-row gap-1  items-center">
+                    <img src="../public/images/calendar-icon.svg" alt="link" class="h-auto w-auto">
+                    <span class="text-base text-neutral-500 font-normal">Joined September 2018</span>
+                </div>
+
+            </div>
+
+            <div class="flex flex-row gap-5">
+                <div class="flex flex-row gap-1  items-center">
+                    <span class="text-neutral-50 font-medium">217</span>
+                    <span class="text-base text-neutral-500 font-normal">Following</span>
+                </div>
+                <div class="flex flex-row gap-1  items-center">
+                    <span class="text-neutral-50 font-medium">118</span>
+                    <span class="text-base text-neutral-500 font-normal">Followers</span>
+                </div>
+
+            </div>
+
+
+        </div>
+
+        <div>
+            
+        </div>
     
 </body>
 </html>
