--- a/src/composeTweet.html
+++ b/src/composeTweet.html
@@ -12,8 +12,10 @@
             <path d="M18 6L6 18" stroke="#F9F9F9" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             <path d="M6 6L18 18" stroke="#F9F9F9" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
-        <button
-      class="bg-twitter-blue py-3 px-6 rounded-btn-sm text-base font-bold text-neutral-50 font-inter h-auto w-auto hover:bg-twitter-blue-hover disabled:opacity-50 ml-auto ">Post</button>
+        
+        <a href="../src/home.html"
+        class="bg-twitter-blue py-3 px-6 rounded-btn-sm text-base font-bold text-neutral-50 font-inter h-auto w-auto hover:bg-twitter-blue-hover disabled:opacity-50 ml-auto ">Post
+      </a>
     </header>
 
     <main class="flex flex-col gap-5 h-full w-full justify-between">
