--- a/src/editProfile.html
+++ b/src/editProfile.html
@@ -13,8 +13,10 @@
             <path d="M19 12.5H5" stroke="#F9F9F9" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
         <span class="text-0.9 font-bold">Edit profile</span>
-        <button
-      class="bg-neutral-50 py-2 px-5 rounded-btn-sm text-base font-bold text-neutral-1000 font-inter h-auto w-auto  disabled:opacity-50 ml-auto ">Save</button>
+    
+        <a href="../src/home.html"
+      class="bg-neutral-50 py-2 px-5 rounded-btn-sm text-base font-bold text-neutral-1000 font-inter h-auto w-auto  disabled:opacity-50 ml-auto ">Save
+    </a>
     </header>
 
     <main class="flex flex-col gap-5 h-full w-full justify-between ">
