--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../dist/output.css" rel="stylesheet">
 </head>
-<body class="">
+<body class="bg-neutral-1000 flex flex-col justify-center items-center w-screen p-4 h-full mt-auto">
+  <a href="../src/login.html">
+  <button
+      class="bg-neutral-50 py-2 px-6 w-full rounded-btn text-base font-bold text-neutral-1000 font-inter shadow-btn backdrop-btn hover:bg-neutral-200 disabled:bg-neutral-50 disabled:opacity-50"> Open Layouts assignment</button>
+    </a>
   
 </body>
 </html>
