--- a/src/step1.html
+++ b/src/step1.html
@@ -114,10 +114,11 @@
                 </div>
         </div>
         <div class="flex flex-col h-full items-end px-5 pt-20 justify-end">
+            <a href="../src/step2.html" class="w-full">
             <button
       class="bg-neutral-50 py-2 px-6 w-full rounded-btn text-base font-bold text-neutral-1000 font-inter shadow-btn backdrop-btn opacity-50">Create
       account</button>
-
+         </a>
         </div>
     </main>
   
