--- a/src/step2.html
+++ b/src/step2.html
@@ -76,9 +76,10 @@
                
         </div>
         <div class="flex flex-col h-full items-center px-5 pt-20 justify-end self-stretch">
+            <a href="../src/step3.html" class="w-full">
             <button
             class="bg-twitter-blue py-5 w-full rounded-btn-post text-base font-medium text-neutral-50 font-inter hover:bg-twitter-blue-hover disabled:opacity-50">Post</button>
-
+        </a>
         </div>
     </main>
   
