--- a/src/step3.html
+++ b/src/step3.html
@@ -44,9 +44,10 @@
                
         </div>
         <div class="flex flex-col h-full items-center px-5 pt-20 justify-end self-stretch">
+            <a href="../src/step4.html" class="w-full">
             <button
       class="bg-neutral-50 py-2 px-6 w-full rounded-btn text-base font-bold text-neutral-1000 font-inter shadow-btn backdrop-btn opacity-50">Next</button>
-
+            </a>      
         </div>
     </main>
   
